src/frontend/PythonAssistantParser.py
# Generated from src/frontend/PythonAssistantParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PythonAssistantParser ( Parser ):

    grammarFileName = "PythonAssistantParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'def'", "'if'", "'elif'", "'else'", "'while'", 
                     "'for'", "'in'", "'return'", "'import'", "'True'", 
                     "'False'", "'None'", "'or'", "'and'", "'not'", "'='", 
                     "'+'", "'-'", "'*'", "'/'", "'**'", "'//'", "'=='", 
                     "'!='", "'<'", "'>'", "'('", "')'", "':'", "','", "'{'", 
                     "'}'", "'.'" ]

    symbolicNames = [ "<INVALID>", "DEF", "IF", "ELIF", "ELSE", "WHILE", 
                      "FOR", "IN", "RETURN", "IMPORT", "TRUE", "FALSE", 
                      "NONE", "OR", "AND", "NOT", "ASSIGN", "PLUS", "MINUS", 
                      "STAR", "SLASH", "DOUBLE_STAR", "IDIV", "EE", "NE", 
                      "LT", "GT", "LPAREN", "RPAREN", "COLON", "COMMA", 
                      "LBRACE", "RBRACE", "DOT", "NUMBER", "STRING", "ID", 
                      "NEWLINE", "WS", "COMMENT" ]

    RULE_file_input = 0
    RULE_stmt = 1
    RULE_simple_stmt = 2
    RULE_compound_stmt = 3
    RULE_funcdef = 4
    RULE_parameters = 5
    RULE_param = 6
    RULE_block = 7
    RULE_if_stmt = 8
    RULE_while_stmt = 9
    RULE_assignment = 10
    RULE_return_stmt = 11
    RULE_expr_stmt = 12
    RULE_test = 13
    RULE_or_test = 14
    RULE_and_test = 15
    RULE_not_test = 16
    RULE_comparison = 17
    RULE_comp_op = 18
    RULE_expr = 19
    RULE_term = 20
    RULE_factor = 21
    RULE_atom = 22
    RULE_trailer = 23
    RULE_arglist = 24

    ruleNames =  [ "file_input", "stmt", "simple_stmt", "compound_stmt", 
                   "funcdef", "parameters", "param", "block", "if_stmt", 
                   "while_stmt", "assignment", "return_stmt", "expr_stmt", 
                   "test", "or_test", "and_test", "not_test", "comparison", 
                   "comp_op", "expr", "term", "factor", "atom", "trailer", 
                   "arglist" ]

    EOF = Token.EOF
    DEF=1
    IF=2
    ELIF=3
    ELSE=4
    WHILE=5
    FOR=6
    IN=7
    RETURN=8
    IMPORT=9
    TRUE=10
    FALSE=11
    NONE=12
    OR=13
    AND=14
    NOT=15
    ASSIGN=16
    PLUS=17
    MINUS=18
    STAR=19
    SLASH=20
    DOUBLE_STAR=21
    IDIV=22
    EE=23
    NE=24
    LT=25
    GT=26
    LPAREN=27
    RPAREN=28
    COLON=29
    COMMA=30
    LBRACE=31
    RBRACE=32
    DOT=33
    NUMBER=34
    STRING=35
    ID=36
    NEWLINE=37
    WS=38
    COMMENT=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class File_inputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PythonAssistantParser.EOF, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonAssistantParser.StmtContext)
            else:
                return self.getTypedRuleContext(PythonAssistantParser.StmtContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(PythonAssistantParser.NEWLINE)
            else:
                return self.getToken(PythonAssistantParser.NEWLINE, i)

        def getRuleIndex(self):
            return PythonAssistantParser.RULE_file_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFile_input" ):
                listener.enterFile_input(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFile_input" ):
                listener.exitFile_input(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFile_input" ):
                return visitor.visitFile_input(self)
            else:
                return visitor.visitChildren(self)




    def file_input(self):

        localctx = PythonAssistantParser.File_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_file_input)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 257832288550) != 0):
                self.state = 52
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1, 2, 5, 8, 15, 27, 34, 35, 36]:
                    self.state = 50
                    self.stmt()
                    pass
                elif token in [37]:
                    self.state = 51
                    self.match(PythonAssistantParser.NEWLINE)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 57
            self.match(PythonAssistantParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_stmt(self):
            return self.getTypedRuleContext(PythonAssistantParser.Simple_stmtContext,0)


        def compound_stmt(self):
            return self.getTypedRuleContext(PythonAssistantParser.Compound_stmtContext,0)


        def getRuleIndex(self):
            return PythonAssistantParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = PythonAssistantParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        try:
            self.state = 61
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8, 15, 27, 34, 35, 36]:
                self.enterOuterAlt(localctx, 1)
                self.state = 59
                self.simple_stmt()
                pass
            elif token in [1, 2, 5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 60
                self.compound_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(PythonAssistantParser.AssignmentContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(PythonAssistantParser.Return_stmtContext,0)


        def expr_stmt(self):
            return self.getTypedRuleContext(PythonAssistantParser.Expr_stmtContext,0)


        def getRuleIndex(self):
            return PythonAssistantParser.RULE_simple_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_stmt" ):
                listener.enterSimple_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_stmt" ):
                listener.exitSimple_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimple_stmt" ):
                return visitor.visitSimple_stmt(self)
            else:
                return visitor.visitChildren(self)




    def simple_stmt(self):

        localctx = PythonAssistantParser.Simple_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_simple_stmt)
        try:
            self.state = 66
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 63
                self.assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                self.return_stmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 65
                self.expr_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Compound_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcdef(self):
            return self.getTypedRuleContext(PythonAssistantParser.FuncdefContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(PythonAssistantParser.If_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(PythonAssistantParser.While_stmtContext,0)


        def getRuleIndex(self):
            return PythonAssistantParser.RULE_compound_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompound_stmt" ):
                listener.enterCompound_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompound_stmt" ):
                listener.exitCompound_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompound_stmt" ):
                return visitor.visitCompound_stmt(self)
            else:
                return visitor.visitChildren(self)




    def compound_stmt(self):

        localctx = PythonAssistantParser.Compound_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_compound_stmt)
        try:
            self.state = 71
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 68
                self.funcdef()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 69
                self.if_stmt()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 70
                self.while_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(PythonAssistantParser.DEF, 0)

        def ID(self):
            return self.getToken(PythonAssistantParser.ID, 0)

        def parameters(self):
            return self.getTypedRuleContext(PythonAssistantParser.ParametersContext,0)


        def COLON(self):
            return self.getToken(PythonAssistantParser.COLON, 0)

        def block(self):
            return self.getTypedRuleContext(PythonAssistantParser.BlockContext,0)


        def getRuleIndex(self):
            return PythonAssistantParser.RULE_funcdef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncdef" ):
                listener.enterFuncdef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncdef" ):
                listener.exitFuncdef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdef" ):
                return visitor.visitFuncdef(self)
            else:
                return visitor.visitChildren(self)




    def funcdef(self):

        localctx = PythonAssistantParser.FuncdefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_funcdef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(PythonAssistantParser.DEF)
            self.state = 74
            self.match(PythonAssistantParser.ID)
            self.state = 75
            self.parameters()
            self.state = 76
            self.match(PythonAssistantParser.COLON)
            self.state = 77
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(PythonAssistantParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(PythonAssistantParser.RPAREN, 0)

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonAssistantParser.ParamContext)
            else:
                return self.getTypedRuleContext(PythonAssistantParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PythonAssistantParser.COMMA)
            else:
                return self.getToken(PythonAssistantParser.COMMA, i)

        def getRuleIndex(self):
            return PythonAssistantParser.RULE_parameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameters" ):
                listener.enterParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameters" ):
                listener.exitParameters(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameters" ):
                return visitor.visitParameters(self)
            else:
                return visitor.visitChildren(self)




    def parameters(self):

        localctx = PythonAssistantParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_parameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(PythonAssistantParser.LPAREN)
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==36:
                self.state = 80
                self.param()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==30:
                    self.state = 81
                    self.match(PythonAssistantParser.COMMA)
                    self.state = 82
                    self.param()
                    self.state = 87
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 90
            self.match(PythonAssistantParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PythonAssistantParser.ID, 0)

        def getRuleIndex(self):
            return PythonAssistantParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = PythonAssistantParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(PythonAssistantParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(PythonAssistantParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(PythonAssistantParser.RBRACE, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonAssistantParser.StmtContext)
            else:
                return self.getTypedRuleContext(PythonAssistantParser.StmtContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(PythonAssistantParser.NEWLINE)
            else:
                return self.getToken(PythonAssistantParser.NEWLINE, i)

        def getRuleIndex(self):
            return PythonAssistantParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = PythonAssistantParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(PythonAssistantParser.LBRACE)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 257832288550) != 0):
                self.state = 97
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [1, 2, 5, 8, 15, 27, 34, 35, 36]:
                    self.state = 95
                    self.stmt()
                    pass
                elif token in [37]:
                    self.state = 96
                    self.match(PythonAssistantParser.NEWLINE)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 102
            self.match(PythonAssistantParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(PythonAssistantParser.IF, 0)

        def test(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonAssistantParser.TestContext)
            else:
                return self.getTypedRuleContext(PythonAssistantParser.TestContext,i)


        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(PythonAssistantParser.COLON)
            else:
                return self.getToken(PythonAssistantParser.COLON, i)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonAssistantParser.BlockContext)
            else:
                return self.getTypedRuleContext(PythonAssistantParser.BlockContext,i)


        def ELIF(self, i:int=None):
            if i is None:
                return self.getTokens(PythonAssistantParser.ELIF)
            else:
                return self.getToken(PythonAssistantParser.ELIF, i)

        def ELSE(self):
            return self.getToken(PythonAssistantParser.ELSE, 0)

        def getRuleIndex(self):
            return PythonAssistantParser.RULE_if_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_stmt" ):
                listener.enterIf_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_stmt" ):
                listener.exitIf_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_stmt" ):
                return visitor.visitIf_stmt(self)
            else:
                return visitor.visitChildren(self)




    def if_stmt(self):

        localctx = PythonAssistantParser.If_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_if_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(PythonAssistantParser.IF)
            self.state = 105
            self.test()
            self.state = 106
            self.match(PythonAssistantParser.COLON)
            self.state = 107
            self.block()
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 108
                self.match(PythonAssistantParser.ELIF)
                self.state = 109
                self.test()
                self.state = 110
                self.match(PythonAssistantParser.COLON)
                self.state = 111
                self.block()
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 118
                self.match(PythonAssistantParser.ELSE)
                self.state = 119
                self.match(PythonAssistantParser.COLON)
                self.state = 120
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(PythonAssistantParser.WHILE, 0)

        def test(self):
            return self.getTypedRuleContext(PythonAssistantParser.TestContext,0)


        def COLON(self):
            return self.getToken(PythonAssistantParser.COLON, 0)

        def block(self):
            return self.getTypedRuleContext(PythonAssistantParser.BlockContext,0)


        def getRuleIndex(self):
            return PythonAssistantParser.RULE_while_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_stmt" ):
                listener.enterWhile_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_stmt" ):
                listener.exitWhile_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_stmt" ):
                return visitor.visitWhile_stmt(self)
            else:
                return visitor.visitChildren(self)




    def while_stmt(self):

        localctx = PythonAssistantParser.While_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_while_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(PythonAssistantParser.WHILE)
            self.state = 124
            self.test()
            self.state = 125
            self.match(PythonAssistantParser.COLON)
            self.state = 126
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PythonAssistantParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(PythonAssistantParser.ASSIGN, 0)

        def test(self):
            return self.getTypedRuleContext(PythonAssistantParser.TestContext,0)


        def getRuleIndex(self):
            return PythonAssistantParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = PythonAssistantParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(PythonAssistantParser.ID)
            self.state = 129
            self.match(PythonAssistantParser.ASSIGN)
            self.state = 130
            self.test()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(PythonAssistantParser.RETURN, 0)

        def test(self):
            return self.getTypedRuleContext(PythonAssistantParser.TestContext,0)


        def getRuleIndex(self):
            return PythonAssistantParser.RULE_return_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_stmt" ):
                listener.enterReturn_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_stmt" ):
                listener.exitReturn_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn_stmt" ):
                return visitor.visitReturn_stmt(self)
            else:
                return visitor.visitChildren(self)




    def return_stmt(self):

        localctx = PythonAssistantParser.Return_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_return_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(PythonAssistantParser.RETURN)
            self.state = 134
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 133
                self.test()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def test(self):
            return self.getTypedRuleContext(PythonAssistantParser.TestContext,0)


        def getRuleIndex(self):
            return PythonAssistantParser.RULE_expr_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_stmt" ):
                listener.enterExpr_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_stmt" ):
                listener.exitExpr_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_stmt" ):
                return visitor.visitExpr_stmt(self)
            else:
                return visitor.visitChildren(self)




    def expr_stmt(self):

        localctx = PythonAssistantParser.Expr_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_expr_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.test()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TestContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def or_test(self):
            return self.getTypedRuleContext(PythonAssistantParser.Or_testContext,0)


        def getRuleIndex(self):
            return PythonAssistantParser.RULE_test

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTest" ):
                listener.enterTest(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTest" ):
                listener.exitTest(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTest" ):
                return visitor.visitTest(self)
            else:
                return visitor.visitChildren(self)




    def test(self):

        localctx = PythonAssistantParser.TestContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_test)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.or_test()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Or_testContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def and_test(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonAssistantParser.And_testContext)
            else:
                return self.getTypedRuleContext(PythonAssistantParser.And_testContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(PythonAssistantParser.OR)
            else:
                return self.getToken(PythonAssistantParser.OR, i)

        def getRuleIndex(self):
            return PythonAssistantParser.RULE_or_test

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOr_test" ):
                listener.enterOr_test(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOr_test" ):
                listener.exitOr_test(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOr_test" ):
                return visitor.visitOr_test(self)
            else:
                return visitor.visitChildren(self)




    def or_test(self):

        localctx = PythonAssistantParser.Or_testContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_or_test)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.and_test()
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==13:
                self.state = 141
                self.match(PythonAssistantParser.OR)
                self.state = 142
                self.and_test()
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class And_testContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def not_test(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonAssistantParser.Not_testContext)
            else:
                return self.getTypedRuleContext(PythonAssistantParser.Not_testContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(PythonAssistantParser.AND)
            else:
                return self.getToken(PythonAssistantParser.AND, i)

        def getRuleIndex(self):
            return PythonAssistantParser.RULE_and_test
